# SOC-Analyst

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  alerts_data.py  app.py  graders.py  requirements.txt  soc_environment.py
